--- a/dynamic-prog/index.html
+++ b/dynamic-prog/index.html
@@ -5,10 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <!-- <script src="weighted-graph.js"></script> -->
-    <!-- <script src="priority-Q.js"></script> -->
-    <script src="dijkshtra-algo.js"></script>
-    <!-- <script src="random.js"></script> -->
+    <script src="fibonacci.js"></script>
 </head>
 <body>
     
