--- a/wildWest/index.html
+++ b/wildWest/index.html
@@ -8,7 +8,9 @@
     <!-- <script src="countZeros.js"></script> -->
     <!-- <script src="pop-SLL.js"></script> -->
     <!-- <script src="sortedFreq.js"></script> -->
-    <script src="middle-LL.js"></script>
+    <!-- <script src="middle-LL.js"></script> -->
+    <!-- <script src="constructNote.js"></script> -->
+    <script src="rotate-SLL.js"></script>
 </head>
 <body>
     
